fix jumping content on mobile browsers when scrolling

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -58,7 +58,6 @@ body
     background-repeat: no-repeat
 
 .teaserimage
-  height: calc(100% - 200px)
   position: relative
   overflow: hidden
   background-color: #000
@@ -128,7 +127,6 @@ body
         color: #333
 
 .content
-  width: 100%
   max-width: 700px
   margin: 0 auto
   @include box-sizing(border-box)
@@ -200,7 +198,6 @@ body
 
 .post-reading
   position: absolute
-  bottom: 14px
   right: 14px
   display: inline-block
   white-space: nowrap
